--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -1,4 +1,10 @@
 # 인터넷의 작동원리
-## 그러게요 ㅎ
+## 인터넷?
+- CP/IP 프로토콜을 기반으로 하여 전 세계 수많은 컴퓨터와 네트워크들이 연결된 광범위한 컴퓨터 통신망
+- 지구 전역에서 서로 다른 기종의 컴퓨터들이 통일된 프로토콜을 사용해 자유롭게 통신을 주고 받을 수 있는 세계 최대의 통신망
+## 데이터를 주고받는 방식
+- TCP/IP
+    서로 다른 통신망,서로 다른 통신 프로토콜을 이용하더라도 서로 통신 할 수 있도록 개발된 통신 프로토콜
+
 
 
