--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -4,7 +4,15 @@
 - 지구 전역에서 서로 다른 기종의 컴퓨터들이 통일된 프로토콜을 사용해 자유롭게 통신을 주고 받을 수 있는 세계 최대의 통신망
 ## 데이터를 주고받는 방식
 - TCP/IP
-    서로 다른 통신망,서로 다른 통신 프로토콜을 이용하더라도 서로 통신 할 수 있도록 개발된 통신 프로토콜
+   + 서로 다른 통신망,서로 다른 통신 프로토콜을 이용하더라도 서로 통신 할 수 있도록 개발된 통신 프로토콜
+    - 인터넷 계층
 
+    - 응용 계층
+    
+    인터넷을 사용하여 응용프로그램(FTP,Talent,SMTP)이 이루어지는 계층
+    - 전송 계층
+    
+    데이터를 목적지까지 전송하기위한 작업을 처리하느 계층
+    
 
 
