--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -12,5 +12,21 @@
     - 전송 계층
         > 데이터를 목적지까지 전송하기위한 작업을 처리하느 계층
     
+- 작동원리
+    - 단순한 네트워크
+    >2개의 컴푸터가 통신이 필요할 때, 우리는 다른 컴퓨터와 유선/무선으로 연결되어야한다.
+    >2개 이상으로 원하는 만큼의 컴퓨터를 연결할 수 있다.(대신 매우 복잠해짐)
+    - 해결책
+    >라우터 사용
+    >   > 라우터?
+    >   > 특수한 소형 컴퓨터
+    >   > 라우터 하나에 하나의 작업만 실행
+    >   > 라우터가 없다면 연결하기위한 컴퓨터의 수만큼 연결선이 필요하지만 라우터가 있다면 중앙에 라우터를 배치하면 그만큼의 연결선이 필요없음
+
+    - 네트워크 속 네트워크
+    1. 라우터 사용
+    > 컴퓨터를 라우터에 연결
+    >라우터에서 연결가능(무한하게 확장가능)
+    >단점 - 자신의 위치에서 아주 먼 곳과는 케이블 연결 불가능
 
 
