--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -1,7 +1,26 @@
 # 인터넷의 작동원리
 ## 인터넷?
-- CP/IP 프로토콜을 기반으로 하여 전 세계 수많은 컴퓨터와 네트워크들이 연결된 광범위한 컴퓨터 통신망
+- TCP/IP 프로토콜을 기반으로 하여 전 세계 수많은 컴퓨터와 네트워크들이 연결된 광범위한 컴퓨터 통신망
 - 지구 전역에서 서로 다른 기종의 컴퓨터들이 통일된 프로토콜을 사용해 자유롭게 통신을 주고 받을 수 있는 세계 최대의 통신망
+
+## 프로토콜?
+- 컴퓨터와 컴퓨터 사이에서 데이터 교환방식을 정의하는 규칙
+
+## 동작원리
+1. TCP/IP 프로토콜
+    >서로 다른 통신망과 프로토콜을 이용하더라도 서로 통신할 수 있도록 개발된 프로토콜
+    > ## 특징 
+    > 1. 개방된 프로토콜
+    >누구나 표준안을 얻을 수 있고 표준안에 참여가능
+    >2. 하드/소프트웨어, 네트워크 망 종류에 관계없이 이용가능
+    >3. 인터넷 주소 보장
+    >인터넷상에서 언제 어디서나 쉽게 통신가능 
+    > ## 계층
+    >- 응용계층, 전송계층, 인터넷 계층, 네트워크 계층
+    > ## 작동방법
+    > -수집된 IP주소와 이에 해당하는 물리적 네트워크 주소정보를 각 IP호스트의 ARP캐시라 불리는 메모리에 테이블 형태로 저장후 다음 패킷 전송시에 사용
+
+
 ## 데이터를 주고받는 방식
 - TCP/IP
    > 서로 다른 통신망,서로 다른 통신 프로토콜을 이용하더라도 서로 통신 할 수 있도록 개발된 통신 프로토콜
