--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -7,8 +7,8 @@
 - 컴퓨터와 컴퓨터 사이에서 데이터 교환방식을 정의하는 규칙
 
 ## 동작원리
-1. TCP/IP 프로토콜
-    >서로 다른 통신망과 프로토콜을 이용하더라도 서로 통신할 수 있도록 개발된 프로토콜
+1. TCP/IP 
+    서로 다른 통신망과 프로토콜을 이용하더라도 서로 통신할 수 있도록 개발된 프로토콜
     > ## 특징 
     > 1. 개방된 프로토콜
     >누구나 표준안을 얻을 수 있고 표준안에 참여가능
@@ -18,7 +18,25 @@
     > ## 계층
     >- 응용계층, 전송계층, 인터넷 계층, 네트워크 계층
     > ## 작동방법
-    > -수집된 IP주소와 이에 해당하는 물리적 네트워크 주소정보를 각 IP호스트의 ARP캐시라 불리는 메모리에 테이블 형태로 저장후 다음 패킷 전송시에 사용
+    > - 수집된 IP주소와 이에 해당하는 물리적 네트워크 주소정보를 각 IP호스트의 ARP캐시라 불리는 메모리에 테이블 형태로 저장후 다음 패킷 전송시에 사용
+
+2. IP주소 
+    > ## IP주소와 IPv6
+    > ## IP주소?
+     TCP/IP 기반으로 인터넷에 연결된 전 세계의 모든 컴퓨터를 식별하게 하는 인터넷 프로토콜 주소
+    > 32비트 주소를 4부분으로 나눠 각각 0~225의 값을 가진다 (32비트의 버전 4 라고해서 IPv4라고 함)
+    > ## IPv6?
+    > 인터넷 사용자의 증가로 IPv4의 주소가 소진되고 IPv4 다음으로 IPv6가 사용됨
+    > 폭발적으로 늘어나는 인터넷 사용에 대비하기 위한것
+    > 128비트 주소를 4부분으로 나눠 사용 (최대 1조개 이상의 주소를 제공가능)
+    >현재 국내 공공기관, 연구기관 등에 인터넷 서비스 제공중
+
+3. 도메인 주소
+    IP주소가 기억하기 어렵고 사용하기 불편하기 때문에 IP주소와 대응하는 단어로 된 주소를 사용하는것
+    >예) www = 인터넷 이름, naver = 기관 이름, .com = 도메인 이름으로 구성됨
+    > ## 어떻게 도메인 주소를 다시 IP주소로 바꿀까?
+    > - DNS 사용
+    >   도메인 이름의 체계, 주소를 실제 IP로 바꿔주는 서비스,시스템
 
 
 ## 데이터를 주고받는 방식
