--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -23,16 +23,16 @@
 2. IP주소 
     > ## IP주소와 IPv6
     > ## IP주소?
-    >TCP/IP 기반으로 인터넷에 연결된 전 세계의 모든 컴퓨터를 식별하게 하는 인터넷 프로토콜 주소
+    >TCP/IP 기반으로 인터넷에 연결된 전 세계의 모든 컴퓨터를 식별하게 하는 인터넷 프로토콜 주소   
     > 32비트 주소를 4부분으로 나눠 각각 0~225의 값을 가진다 (32비트의 버전 4 라고해서 IPv4라고 함)
     > ## IPv6?
-    > 인터넷 사용자의 증가로 IPv4의 주소가 소진되고 IPv4 다음으로 IPv6가 사용됨
-    > 폭발적으로 늘어나는 인터넷 사용에 대비하기 위한것
-    > 128비트 주소를 4부분으로 나눠 사용 (최대 1조개 이상의 주소를 제공가능)
+    > 인터넷 사용자의 증가로 IPv4의 주소가 소진되고 IPv4 다음으로 IPv6가 사용됨   
+    > 폭발적으로 늘어나는 인터넷 사용에 대비하기 위한것으로
+    > 128비트 주소를 4부분으로 나눠 사용 (최대 1조개 이상의 주소를 제공가능)   
     >현재 국내 공공기관, 연구기관 등에 인터넷 서비스 제공중
 
 3. 도메인 주소
-    > IP주소가 기억하기 어렵고 사용하기 불편하기 때문에 IP주소와 대응하는 단어로 된 주소를 사용하는것
+    > IP주소가 기억하기 어렵고 사용하기 불편하기 때문에 IP주소와 대응하는 단어로 된 주소를 사용하는것   
     >예) www = 인터넷 이름, naver = 기관 이름, .com = 도메인 이름으로 구성됨
     > ## 어떻게 도메인 주소를 다시 IP주소로 바꿀까?
     > - DNS 사용   
@@ -41,7 +41,7 @@
 
     
 ## 작동원리
- - 단순한 네트워크
+  단순한 네트워크
     >2개의 컴푸터가 통신이 필요할 때, 우리는 다른 컴퓨터와 유선/무선으로 연결되어야한다.
     >2개 이상으로 원하는 만큼의 컴퓨터를 연결할 수 있다.(대신 매우 복잠해짐)
     - 해결책
