--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -41,11 +41,11 @@
 
     
 ## 작동원리
-  단순한 네트워크
-    >2개의 컴푸터가 통신이 필요할 때, 우리는 다른 컴퓨터와 유선/무선으로 연결되어야한다.
+ ### 단순한 네트워크
+- 2개의 컴푸터가 통신이 필요할 때, 우리는 다른 컴퓨터와 유선/무선으로 연결되어야한다.   
     >2개 이상으로 원하는 만큼의 컴퓨터를 연결할 수 있다.(대신 매우 복잠해짐)
-    - 해결책
-    >라우터 사용
+    > ## 해결책
+    > - 라우터 사용
     >   > 라우터?
     >   > 특수한 소형 컴퓨터
     >   > 라우터 하나에 하나의 작업만 실행
