--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -43,10 +43,10 @@
 ## 작동원리
  ## 단순한 네트워크
 - 2개의 컴푸터가 통신이 필요할 때, 우리는 다른 컴퓨터와 유선/무선으로 연결되어야한다.
-<img src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdQgzYe%2FbtqTcQXEZmq%2FKb26sNOu1MnNRI9bQONtx1%2Fimg.png"width ="200px" heigh="200px">
+> <img src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdQgzYe%2FbtqTcQXEZmq%2FKb26sNOu1MnNRI9bQONtx1%2Fimg.png"width ="200px" heigh="200px">
 
 2개 이상으로 원하는 만큼의 컴퓨터를 연결할 수 있다.(대신 매우 복잠해짐)
-<img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcibDry%2FbtqS29c9Xfw%2FwflLiKKdsMbvar8XbLSVl1%2Fimg.png"width ="200px" heigh="200px">   
+> <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcibDry%2FbtqS29c9Xfw%2FwflLiKKdsMbvar8XbLSVl1%2Fimg.png"width ="200px" heigh="200px">   
 
 ## 해결책
 >라우터 사용
