--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -43,7 +43,7 @@
 ## 작동원리
  ## 단순한 네트워크
 - 2개의 컴푸터가 통신이 필요할 때, 우리는 다른 컴퓨터와 유선/무선으로 연결되어야한다.
-> <img scr="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdQgzYe%2FbtqTcQXEZmq%2FKb26sNOu1MnNRI9bQONtx1%2Fimg.png" width ="800px" height ="202px" >
+> <img scr="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimg1.daumcdn.net%2Fthumb%2FR800x0%2F%3Fscode%3Dmtistory2%26fname%3Dhttps%253A%252F%252Fblog.kakaocdn.net%252Fdn%252FdQgzYe%252FbtqTcQXEZmq%252FKb26sNOu1MnNRI9bQONtx1%252Fimg.png&imgrefurl=https%3A%2F%2Fdevelopment-crow.tistory.com%2F3&tbnid=B7jqUVapAnG4MM&vet=12ahUKEwjMnMXNxeb2AhUDAt4KHTYjCBcQMygWegUIARDoAQ..i&docid=I1Le3VtN4u9FLM&w=800&h=202&q=%EC%9D%B8%ED%84%B0%EB%84%B7%20%EC%9E%91%EB%8F%99%EC%9B%90%EB%A6%AC&ved=2ahUKEwjMnMXNxeb2AhUDAt4KHTYjCBcQMygWegUIARDoAQ" width ="800px" height ="202px" >
 
 2개 이상으로 원하는 만큼의 컴퓨터를 연결할 수 있다.(대신 매우 복잠해짐)
 > <img scr ="https://mdn.mozillademos.org/files/8443/internet-schema-2.png" width ="600px" height = "756px">
