--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -43,10 +43,10 @@
 ## 작동원리
  ## 단순한 네트워크
 - 2개의 컴푸터가 통신이 필요할 때, 우리는 다른 컴퓨터와 유선/무선으로 연결되어야한다.
-> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFBXZ1sZ8aVqIcrOpxtu2JtzvVXQ5xj0Acog&usqp=CAU" width ="800px" height ="202px" >
+ <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFBXZ1sZ8aVqIcrOpxtu2JtzvVXQ5xj0Acog&usqp=CAU" width ="800px" height ="202px" >
 
 2개 이상으로 원하는 만큼의 컴퓨터를 연결할 수 있다.(대신 매우 복잠해짐)
-> <img scr ="https://mdn.mozillademos.org/files/8443/internet-schema-2.png" width ="600px" height = "756px">
+ <img scr ="https://mdn.mozillademos.org/files/8443/internet-schema-2.png" width ="600px" height = "756px">
 
 ## 해결책
 >라우터 사용
