--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -43,7 +43,7 @@
 ## 작동원리
  ## 단순한 네트워크
 - 2개의 컴푸터가 통신이 필요할 때, 우리는 다른 컴퓨터와 유선/무선으로 연결되어야한다.
- <img src ="https://mdn.mozillademos.org/files/8443/internet-schema-2.png" >
+ <img src ="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FdQgzYe%2FbtqTcQXEZmq%2FKb26sNOu1MnNRI9bQONtx1%2Fimg.png" >
 
 2개 이상으로 원하는 만큼의 컴퓨터를 연결할 수 있다.(대신 매우 복잠해짐)
  <img src ="https://mdn.mozillademos.org/files/8443/internet-schema-2.png" >
@@ -53,10 +53,12 @@
 >- 라우터?   
 >특수한 소형 컴퓨터로 하나에 하나의 작업만 실행   
 >- 라우터가 없다면 연결하기위한 컴퓨터의 수만큼 연결선이 필요함.   하지만 라우터가 있다면 중앙에 라우터를 배치하면 그만큼의 연결선이 필요없음
+> <img src ="https://media.vlpt.us/images/doomchit_3/post/6334de99-3d4d-427d-a31b-74b485650f3d/3.png" >
 ## 네트워크 속 네크워크
 > 1. 라우터 사용
 > 컴퓨터를 라우터에 연결, 라우터에서 라우터로 연결가능 = 무한하게 확장가능!   
 단점: 자신의 위치에서 아주 먼 곳과는 케이블 연결 불가능
+<img src = "https://mdn.mozillademos.org/files/8449/internet-schema-5.png" >
 <hr/>
 
 ### 여기까지 직접 선을 연결하여 인터넷 작동 원리. 아래부터 네트워크 간 연결방법
@@ -69,6 +71,7 @@
 >네트워크를 전화시설과 연결하기위한 특수장비   
 >우리 네트워크 정보를 전화시설에서 처리할 수 있는 정보로 바꿈
 >(네트워크 - 전화시설 연결 : 네트워크 정보에서 도달하려는 네트워크 메세지를 보내는것)
+<img src ="https://media.vlpt.us/images/doomchit_3/post/37085ff4-19f0-4c3b-9ac2-58a520cf52c6/6.png" >
 >   >- 방법?   
 >   > 네트워크를 인터넷 서비스 제공 업체(ISP: KT,LGU+,SKT)에 연결
 >   > - ISP는 연결되는 특수한 라우터를 관리함   다른 ISP의 라우터에 엑세스 가능   ISP네트워크를 통하여 먼 지역의 네트워크도 전달가능
