--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -34,7 +34,7 @@
 3. 도메인 주소
     > IP주소가 기억하기 어렵고 사용하기 불편하기 때문에 IP주소와 대응하는 단어로 된 주소를 사용하는것   
     >예) www = 인터넷 이름, naver = 기관 이름, .com = 도메인 이름으로 구성됨
-    > ## 어떻게 도메인 주소를 다시 IP주소로 바꿀까?
+    > ### 어떻게 도메인 주소를 다시 IP주소로 바꿀까?
     > - DNS 사용   
     >   도메인 이름의 체계, 주소를 실제 IP로 바꿔주는 서비스,시스템
 
@@ -63,15 +63,16 @@
 
 ### 여기까지 직접 선을 연결하여 인터넷 작동 원리. 아래부터 네트워크 간 연결방법
 
-> 2. 모뎀 
+> 2. 모뎀   
 > 라우터 사용시 먼 지역의 컴퓨터(네트워크)를 연결 불가능   
 >- 해결책   
 > 모뎀 사용   
-> 모뎀?   
+> - 모뎀?   
 >네트워크를 전화시설과 연결하기위한 특수장비   
 >우리 네트워크 정보를 전화시설에서 처리할 수 있는 정보로 바꿈
 >(네트워크 - 전화시설 연결 : 네트워크 정보에서 도달하려는 네트워크 메세지를 보내는것)
 <img src ="https://media.vlpt.us/images/doomchit_3/post/37085ff4-19f0-4c3b-9ac2-58a520cf52c6/6.png" >
+
 >   >- 방법?   
 >   > 네트워크를 인터넷 서비스 제공 업체(ISP: KT,LGU+,SKT)에 연결
 >   > - ISP는 연결되는 특수한 라우터를 관리함   다른 ISP의 라우터에 엑세스 가능   ISP네트워크를 통하여 먼 지역의 네트워크도 전달가능
