--- a/인터넷의 작동원리.md
+++ b/인터넷의 작동원리.md
@@ -18,7 +18,7 @@
     > ## 계층
     >- 응용계층, 전송계층, 인터넷 계층, 네트워크 계층
     > ## 작동방법
-    > - 수집된 IP주소와 이에 해당하는 물리적 네트워크 주소정보를 각 IP호스트의 ARP캐시라 불리는 메모리에 테이블 형태로 저장후 다음 패킷 전송시에 사용
+    > - 수집된 IP주소와 이에 해당하는 물리적 네트워크 주소정보를 각 IP호스트의 ARP캐시(IP주소와 물리적 네트워크를 대응시키는 프로토콜)라 불리는 메모리에 테이블 형태로 저장후 다음 패킷 전송시에 사용
 
 2. IP주소 
     > ## IP주소와 IPv6
@@ -35,7 +35,7 @@
     > IP주소가 기억하기 어렵고 사용하기 불편하기 때문에 IP주소와 대응하는 단어로 된 주소를 사용하는것   
     >예) www = 인터넷 이름, naver = 기관 이름, .com = 도메인 이름으로 구성됨
     > ### 어떻게 도메인 주소를 다시 IP주소로 바꿀까?
-    > - DNS 사용   
+    > - DNS(도메인 이름 시스템, Domain Name System) 사용   
     >   도메인 이름의 체계, 주소를 실제 IP로 바꿔주는 서비스,시스템
 
 
