--- a/정리/브라우저와 동작원리.md
+++ b/정리/브라우저와 동작원리.md
@@ -3,4 +3,15 @@
  인터넷에서 웹 서버의 모든 정보를 볼 수 있도록 하고 문서 검색을 도와주는 응용 프로그램   
  인터넷을 통해 검색을 할때 사이트에 접속하여 필요한 정보를 검색하는데, 이 때 사이트를 접속할 수 있는 도구를 **브라우저**라고 한다   
  예) 크롬, 사파리, 엣지, 파이어 폭스 등   
- 
+> 특징
+> - 웹 브라우저의 주소창에서 해당 자료가 있는 URL을 입력하여 자료를 요청하면 해당 서버에서 문서를 가져와 클라이언트에게 보여주는 사용자 인터페이스 역할을 함
+> - 단순히 문서의 내용만을 보여주는 것이 아니라, 하이퍼텍스트 문서를 검색하는 것들을 도와줌
+> - 인터넷 관련 기술 중 기술개발 속도가 매우 빠르다.
+> - 기술의 표준이 정착되기 전에 새로운 기술이 개발되고 적용되기 때문에 웹 브라우저 프로그램에 따라 제공되는 정보의 종류들이 시시각각 달라진다
+>기능
+> - 웹 페이지 열기 
+> - 최근 방문한 인터넷 주소(URL)의 목록 제공
+> - 자주 방문하는 URL 기억 및 관리
+> - 웹 페이지의 저장 및 인쇄
+> - 프로그램, HTML 문서 편집
+
