--- a/정리/브라우저와 동작원리.md
+++ b/정리/브라우저와 동작원리.md
@@ -13,5 +13,7 @@
 > - 최근 방문한 인터넷 주소(URL)의 목록 제공
 > - 자주 방문하는 URL 기억 및 관리
 > - 웹 페이지의 저장 및 인쇄
-> - 프로그램, HTML 문서 편집
+> - 프로그램, HTML 문서 편집   
 
+### 동작원리
+> 
