--- a/정리/브라우저와 동작원리.md
+++ b/정리/브라우저와 동작원리.md
@@ -17,4 +17,7 @@
 > - 프로그램, HTML 문서 편집   
 
 ### 동작원리
-> 
+> 1. DOM 트리 구축하기 위한 HTML 파싱
+> > 브라우저는 서버로부터 HTML 문서를 모두 전달받고 렌더링 엔진은 전달받은 HTML문서를 파싱해서 DOM트리를 구축한다.   또한 외구 CSS 파일과 스타일 요소도 파싱한다
+> 2. 렌더 트리 구축
+> >  DOM트리 + 스타일 정보 = 렌더트리 구축
