--- a/정리/브라우저와 동작원리.md
+++ b/정리/브라우저와 동작원리.md
@@ -34,20 +34,21 @@
 > 7. 자료 저장소
 > > 자료를 저장하는 곳
 
-> > ## 렌더링 엔진##
-> > 요청받은 내용을 브라우저 화면에 표시한다   HTML 및 XML문서와 이미지를 표시할 수 있고 플러그인이나 브라우저 확장 기능을 이용하여 다양한 유형의 문서와 데이터를 표시할 수 있다.
+> > *** 렌더링 엔진 ***
+> > 요청받은 내용을 브라우저 화면에 표시한다   
+> > HTML 및 XML문서와 이미지를 표시할 수 있고 플러그인이나 브라우저 확장 기능을 이용하여 다양한 유형의 문서와 데이터를 표시할 수 있다.
 ### 동작원리
 > 1. DOM 트리 구축하기 위한 HTML 파싱
 > > 브라우저는 서버로부터 HTML 문서를 모두 전달받고 렌더링 엔진은 전달받은 HTML문서를 파싱해서 DOM트리를 구축한다.   또한 외부 CSS 파일과 스타일 요소도 파싱하여 DOM트리를 구축한다
 > 2. 렌더 트리 구축
-> >  DOM트리 + 스타일 정보 = 렌더트리 구축
+> >  DOM트리 + 스타일 정보 = 렌더트리 
 > 3. 렌더 트리 배치
 > > 렌더 트리의 각 노드에 대해 화면에서 어느곳에 배치할 지 결정된다
 > 4. 렌더 트리 그리기 
 > > UI 백엔드에서 렌더 트리를 형성 후 화면에 출력한다
 
-> >### 파싱###
+> > **파싱**
 > > 코드를 브라우저가 이해할 수 있도록 변환하는 것   문장을 이루고 있는 구성 성분을 분해하고 분해된 성분의 위계 관계를 분석하여 구조를 결정한 뒤 웹상에서 주어진 정보를 내가 원하는 형태로 가공하여 서버에 불러들이는 것이다
 > > > 브라우저는 HTML을 받아서 어휘와 구문을 분석하고 파싱해서 파싱트리를 만든다
-> >### 렌더 트리###
+> > **렌더 트리**
 > > DOM과 CSSOM의 독립적인 개체를 병합하여 화면에 출력하기 위한 마지막 단계   
