--- a/정리/브라우저와 동작원리.md
+++ b/정리/브라우저와 동작원리.md
@@ -47,6 +47,11 @@
 > 4. 렌더 트리 그리기 
 > > UI 백엔드에서 렌더 트리를 형성 후 화면에 출력한다
 
+> > DOM 트리
+> > HTML 내의 원하는 위치에 접근하기 위한 하나의 방식   
+> > 브라우저가 HTML 웹 페이지를 인식하는 방식을 계층화시켜서 트리구조로 만든 객체 모델이다
+> >  
+
 > > **파싱**
 > > 코드를 브라우저가 이해할 수 있도록 변환하는 것   문장을 이루고 있는 구성 성분을 분해하고 분해된 성분의 위계 관계를 분석하여 구조를 결정한 뒤 웹상에서 주어진 정보를 내가 원하는 형태로 가공하여 서버에 불러들이는 것이다
 > > > 브라우저는 HTML을 받아서 어휘와 구문을 분석하고 파싱해서 파싱트리를 만든다
