--- a/정리/브라우저와 동작원리.md
+++ b/정리/브라우저와 동작원리.md
@@ -36,7 +36,7 @@
 
 > > - 렌더링 엔진 
 > > 요청받은 내용을 브라우저 화면에 표시한다   
-> > HTML 및 XML문서와 이미지를 표시할 수 있고 플러그인이나 브라우저 확장 기능을 이용하여 다양한 유형의 문서와 데이터를 표시할 수 있다.
+> > > HTML 및 XML문서와 이미지를 표시할 수 있고 플러그인이나 브라우저 확장 기능을 이용하여 다양한 유형의 문서와 데이터를 표시할 수 있다.
 ### 동작원리
 > 1. DOM 트리 구축하기 위한 HTML 파싱
 > > 브라우저는 서버로부터 HTML 문서를 모두 전달받고 렌더링 엔진은 전달받은 HTML문서를 파싱해서 DOM트리를 구축한다.  
