--- a/정리/도메인 네임은 무엇일까요.md
+++ b/정리/도메인 네임은 무엇일까요.md
@@ -11,9 +11,9 @@
 1. 등록된 도메인 네임은 보통 호스트명의 일부분으로 DNS 상에서 해당 호스트명 및 그 하위의 호스트명들은 일반적으로 해당 등록자에게 권한이 주어진다.
 2. 도메인 레지스트리는 도메인 네임의 종류에 따라 ICANN(국제 인터넷 주소자원 관리기관)과 해당 국가 기관으로부터 승인을 받아서 일반 사용자들의 도메인 등록을 위임받는 역할을 한다.
 3. 도메인 네임은 숫자로 된 IP주소에 비해 외우기 쉬우며, 여러 개의 IP 주소가 한 도메인에 대응되거나 여러 도메인이 하나의 IP주소로 대응되는것이 가능하다.
-
+> -도메인 네임 레지스트리: 최상위 도메인에 등록된 모든 도메인 네임의 데이터 베이스
 ### 종류
-1. gTLD(일반 최상위 도메인)
+1. gTLD(일반 최상위 도메인)   
     ICANN이 관리하는 도메인    
     대부분 국가와 관계없이 등록할 수 있기 떄문에 국제 도메인이라고 불림   
     .com, .org, .net 등이 포함됨
@@ -21,7 +21,9 @@
      ISO 3166-1에 의해 이름이 결정되고 각국의 NIC에서 관리하는 국가별 도메인
 3. iTLD(기반 최상위 도메인)   
      인터넷의 하부 구조를 위해 사용되는 특수한 도메인.
-
+> - ICANN(국제 인터넷 주소 관리기구): 인터넷의 DNS의 기술적 관리, IP주소공간 할당 등 서버 시스템관리등의 업무를 조정하는 역할을 하는 기관   
+> - ISO 3166-1: ISO 3166의 표준   
+세계의 나라와 부속 영토, 국가의 주요 구성 단위의 명칭에 고유 부호를 부여함
 ### 도메인 네임의 구조
 <img src="https://velog.velcdn.com/images%2Fm-vault%2Fpost%2Faa47ab6d-b47e-4150-b23d-4feb79d20924%2F1.png">
 
@@ -49,3 +51,5 @@
 > SLD는 포함할 수 있고, 제외할 수도 있다. 따라서 도메인 구조를 단계로 나눴을때   
 > 'www.google.co.kr' 의 3단계 구조일 수도 있고   
 > 'www.naver.com' 의 2단계 구조가 될 수도 있다.
+>  > - 호스트 명: 네트워크에 연결된 장치들에게 부여되는 고유한 이름
+
