--- a/정리/도메인 네임은 무엇일까요.md
+++ b/정리/도메인 네임은 무엇일까요.md
@@ -33,14 +33,14 @@
 > 가장 최상위에 위치함   
 > 실제로 주소에는 '.'이 있지만 생략가능하다
 > 2. TLD(Top-Level Domain)   
-> 최상위 도메인
+> 최상위 도메인   
 > 도메인 레벨 중에 가장 높은 단계에 있는 도메인
 > 도메인의 목적, 종류, 국가를 나타낸다   
 > 예) .com, .org, .net, ,kr, .us   
-> 3. SLD(Second-Level Domain)
+> 3. SLD(Second-Level Domain)   
 > 차상위 도메인   
 > 'www.google.co.kr 처럼 SLD가 존재하는 경우도 있고, www.naver.com 처럼 SLD없이 TLD에서 바로 도메인 이름으로 건거뛰는 경우도 있음   
-> 즉 도메인의 성격을 나타낸디
+> 즉 도메인의 성격을 나타낸다   
 > 예) co(영리목적의 단체, 기업체), go(정부기관)   
 > 4. SUB(도메인 이름)   
 > 임의로 지정할 수 있는 사이트의 이름   
